<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:checked="true"
            android:icon="@drawable/historical_places"
            android:title="@string/historical_places" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/restaurants"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/hotels"
            android:title="@string/hotels" />
    </group>
    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/feedback" />
        </menu>
    </item>
</menu>